--- a/playback/service/src/main/AndroidManifest.xml
+++ b/playback/service/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -18,7 +19,7 @@
 
         <service android:name="de.danoeh.antennapod.playback.service.PlaybackService"
             android:label="@string/app_name"
-            android:enabled="true"
+            android:enabled="${oldServiceEnabled}"
             android:exported="true"
             android:foregroundServiceType="mediaPlayback"
             tools:ignore="ExportedService">
@@ -31,6 +32,7 @@
 
         <receiver
             android:name="de.danoeh.antennapod.playback.service.MediaButtonReceiver"
+            android:enabled="${oldServiceEnabled}"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
@@ -42,7 +44,7 @@
 
         <service
             android:name="de.danoeh.antennapod.playback.service.QuickSettingsTileService"
-            android:enabled="true"
+            android:enabled="${oldServiceEnabled}"
             android:exported="true"
             android:label="@string/app_name"
             android:icon="@drawable/ic_notification"
@@ -54,6 +56,30 @@
             <meta-data android:name="android.service.quicksettings.ACTIVE_TILE" android:value="true" />
             <meta-data android:name="android.service.quicksettings.TOGGLEABLE_TILE" android:value="true" />
         </service>
+
+        <service
+            android:name="de.danoeh.antennapod.playback.service.Media3PlaybackService"
+            android:enabled="${newServiceEnabled}"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:foregroundServiceType="mediaPlayback"
+            tools:ignore="ExportedService">
+            <intent-filter>
+                <action android:name="androidx.media3.session.MediaSessionService" />
+                <action android:name="androidx.media3.session.MediaLibraryService" />
+                <action android:name="de.danoeh.antennapod.intents.PLAYBACK_SERVICE_MEDIA3" />
+                <action android:name="android.media.browse.MediaBrowserService"/>
+            </intent-filter>
+        </service>
+
+        <receiver
+            android:name="androidx.media3.session.MediaButtonReceiver"
+            android:enabled="${newServiceEnabled}"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
     </application>
 
     <queries>
