--- a/playback/cast/build.gradle
+++ b/playback/cast/build.gradle
@@ -21,4 +21,6 @@ dependencies {
 
     playApi 'androidx.mediarouter:mediarouter:1.3.0'
     playApi 'com.google.android.gms:play-services-cast-framework:21.2.0'
+    implementation "androidx.media3:media3-exoplayer:$media3Version"
+    playImplementation "androidx.media3:media3-cast:$media3Version"
 }
